syntax = "proto3";
package  enichaintest.epoch;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


option go_package = "github.com/eni-chain/go-eni/x/epoch/types";

message Epoch {
  // authority defines the custom module authority. If not set, defaults to the governance module.
  string authority = 1;
  google.protobuf.Timestamp genesis_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"genesis_time\""
  ];
  uint64 epoch_interval = 3 [
    (gogoproto.jsontag) = "epoch_interval",
    (gogoproto.moretags) = "yaml:\"epoch_interval\""
  ];
  uint64 current_epoch = 4 [
    (gogoproto.jsontag) = "current_epoch",
    (gogoproto.moretags) = "yaml:\"current_epoch\""
  ];
  uint64 current_epoch_start_height = 5 [
    (gogoproto.jsontag) = "current_epoch_start_height",
    (gogoproto.moretags) = "yaml:\"current_epoch_start_height\""
  ];
  int64 current_epoch_height = 6 [
    (gogoproto.jsontag) = "current_epoch_height",
    (gogoproto.moretags) = "yaml:\"current_epoch_height\""
  ];
}
